- updated bundled TinyMCE to version 4.7.13 (Thorsten)
- updated bundled CookieConsent to version 3.0.6 (Thorsten)
- removed translation admin frontend (Thorsten)
- removed XHTML export (Thorsten)
- removed support for ext/mssql (Thorsten)
- removed bundled Symfony ClassLoader (Thorsten)
- removed bundled Font Awesome icons (Thorsten)
- removed Bower, now using Yarn only (Thorsten)

Version 2.9.9 - 2017-10-19
- fixed multiple XSS and CSRF vulnerabilities (Thorsten)
- updated bundled Bootstrap to version 3.3.7 (Thorsten)
- updated bundled Font Awesome to version 4.7.0 (Thorsten)
- updated bundled TinyMCE to version 4.5.7 (Thorsten)
- updated bundled HighlightJS to version 9.12.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.8 - 2017-07-12
- fixed improper restriction (Thorsten)
- add LDAP search in sub groups (Thorsten)
- updated French translation
- fixed minor bugs (Thorsten)

Version 2.9.7 - 2017-04-02
- fixed stored XSS vulnerability (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.6 - 2017-01-27
- fixed possible arbitrary PHP code execution (Thorsten)
- ready for PHP 7.1 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.5 - 2016-08-31
- fixed minor bugs (Thorsten, Matt Brennan)

Version 2.9.4 - 2016-08-02
- deactivated debug mode (Thorsten)
- updated bundled TinyMCE to version 4.4.1 (Thorsten)
- updated bundled Bootstrap to version 3.3.7 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.3 - 2016-08-01
- fixed minor bugs (Thorsten)

Version 2.9.2 - 2016-07-05
- updated bundled phpseclib to version 2.0.2 (Thorsten)
- updated bundled TinyMCE to version 4.4.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.1 - 2016-05-31
- fixed stored XSS vulnerability (Kacper Szurek)
- added new source code paste plugin (Thorsten)
- removed American English translation (Thorsten)
- updated bundled TinyMCE to version 4.3.12 (Thorsten)
- updated bundled Typeahead.js to version 0.11.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.0 - 2016-05-13