@@ -67,7 +67,7 @@ services:
     volumes:
       - ./volumes/sessions:/sessions
   elasticsearch:
-    image: elasticsearch:2.4.6
+    image: elasticsearch:5.6.9
     restart: always
     environment:
       - cluster.name=phpmyfaq-cluster
