@@ -26,8 +26,6 @@
   <link rel="apple-touch-icon" href="{{ baseHref }}assets/themes/{{ tplSetName }}/img/apple-touch-icon.png">
   <link rel="canonical" href="{{ currentPageUrl }}">
 
-  <script src="{{ baseHref }}assets/js/modernizr.min.js"></script>
-
   <link rel="alternate" title="News RSS Feed" type="application/rss+xml" href="{{ baseHref }}feed/news/rss.php">
   <link rel="alternate" title="TopTen RSS Feed" type="application/rss+xml" href="{{ baseHref }}feed/topten/rss.php">
   <link rel="alternate" title="Latest FAQ Records RSS Feed" type="application/rss+xml"
